--- a/src/styles/_headers.scss
+++ b/src/styles/_headers.scss
@@ -64,6 +64,7 @@
   top: 3px;
   width: 280px;
   height: auto;
+  z-index: 1;
 
   &.nameStyle-light {
     a {
